0.9.0 (currently working on)
- [#3119] Change: Rework the salutation in the thank-you e-mails
- [#3159] Fix: Missing config check for allowRegistrationForEventsWithoutDate
- [#3120] Feature: Copy the company name and full name from the FE user into the billing data fields and store them in the session
- [#3114] Feature: In the notification e-mail to the organizers, enumerate the registered persons
- [#3118] Feature: In the thank-you e-mail, include the places' address field
- [#3121] Change: When CSV-exporting the name in the FE users and registrations, take the first name and last name
- [#2773] Fix: 3 registration records created when registering with IE 6
- [#3146] Fix: $uid is not initialized in registration::setRegistrationData
- [#3151] Fix: SQL error on the registration page with latest static_info_tables
- [#3116] Feature: Add a three-line textarea "company" to the billing address section in the registration form
- [#3113] Feature: In the thank-you e-mail to the attendees, enumerate the registered persons
- [#3142] Fix: Test failures with base64 encoding
- [#3109] Feature: Allow the CSV export of the "company" field in the billing address
- [#2234] Change: Use $GLOBALS['SIM_ACCESS_TIME'] instead of time() in seminars
- [#3112] Feature: Allow the usage of the billing address company field in the e-mail to the organizer
- [#3134] Fix: Check line feeds for multiline registration CSV exports
- [#3115] Feature: Add the checkbox "myself" to the registration form
- [#3111] Feature: Allow the field "has signed up themselves" in the CSV export
- [#3091] Feature: Only show aux records for selection in the FE editor that have no owner or are owned by the current FE user
- [#3110] Feature: Add a checkbox "has signed up themselves" to the registration records
- [#3108] Feature: Add a field "company" to the billing address in the registration records
- [#3092] Feature: Display a "Create new" button below the aux records selection in the FE editor