@@ -104,6 +104,9 @@ plugin.tx_seminars {
 	# Number of days before the start of an event until unregistration is possible. (If you want to disable this feature, just leave this value empty.)
 	unregistrationDeadlineDaysBeforeBeginDate =
 
+	# whether registration should be possible even if an event has already started
+	allowRegistrationForStartedEvents = 0
+
 	# whether registration for events without a date should be possible
 	allowRegistrationForEventsWithoutDate = 0
 
